Actualizacion de CRUD plataformas

--- a/index.html
+++ b/index.html
@@ -98,12 +98,19 @@
       </div>
     </div>
 
-    <div id="crud">
-        <button>Crear plataforma</button>
-        <button>Descripcion de plataformas</button>
-        <button>Editar plataforma</button>
-        <button>Eliminar plataforma</button>
-      </div>
+    <div class="crud">
+      <ul class="crudlist">
+        <li>
+          <a href="#">Agregar plataforma</a>
+        </li>
+        <li>
+          <a href="#">Modificar plataforma</a>
+        </li>
+        <li>
+          <a href="#">Eliminar plataforma</a>
+        </li>
+      </ul>
+     </div>
   
       <div id="streaming">
         <table>
